--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 ---
  name: pod-mode
  abstract: Emacs syntax highlighting for POD
- version: 0.5
+ version: 0.501
  author:
    - Steffen Schwigon <ss5@renormalist.net>
  license: perl
@@ -13,3 +13,8 @@
    version: 1.3
    url: http://module-build.sourceforge.net/META-spec-v1.3.html
  generated_by: Steffen Schwigon
+ provides:
+   pod-mode:
+     file: pod-mode.el
+     abstract: Emacs syntax highlighting for POD
+     version: 0.501
