--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,11 @@
 ---
 name: pod-mode
 abstract: Emacs syntax highlighting for POD
-version: 1.00
+version: 1.01
 author:
   - Steffen Schwigon <ss5@renormalist.net>
-license: perl
+  - Florian Ragwitz <rafl@debian.org>
+license: gpl_2
 distribution_type: script
 resources:
   license: http://dev.perl.org/licenses/
@@ -17,4 +18,4 @@ provides:
   pod-mode:
     file: pod-mode.el
     abstract: Emacs syntax highlighting for POD
-    version: 1.00
+    version: 1.01
