--- a/META.yml
+++ b/META.yml
@@ -1,21 +1,102 @@
 ---
-name: pod-mode
-abstract: Emacs syntax highlighting for POD
-version: 1.01
+abstract: 'Emacs major mode for editing .pod-files'
 author:
-  - Steffen Schwigon <ss5@renormalist.net>
-  - Florian Ragwitz <rafl@debian.org>
-license: gpl_2
-distribution_type: script
-resources:
-  license: http://dev.perl.org/licenses/
-  homepage: http://renormalist.net/cgi-bin/twiki/view/Renormalist/PodMode
+  - 'Steffen Schwigon <ss5@renormalist.net>'
+  - 'Florian Ragwitz <rafl@debian.org>'
+build_requires: {}
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.101890, CPAN::Meta::Converter version 2.101670'
+license: gpl
 meta-spec:
-  version: 1.3
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-generated_by: Steffen Schwigon
-provides:
-  pod-mode:
-    file: pod-mode.el
-    abstract: Emacs syntax highlighting for POD
-    version: 1.01
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: pod-mode
+resources:
+  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=pod-mode
+  homepage: http://search.cpan.org/dist/pod-mode
+  repository: git://github.com/renormalist/emacs-pod-mode.git
+version: 1.02
+x_Dist_Zilla:
+  plugins:
+    -
+      class: Dist::Zilla::Plugin::GatherDir
+      name: GatherDir
+      version: 4.101890
+    -
+      class: Dist::Zilla::Plugin::PruneCruft
+      name: PruneCruft
+      version: 4.101890
+    -
+      class: Dist::Zilla::Plugin::ManifestSkip
+      name: ManifestSkip
+      version: 4.101890
+    -
+      class: Dist::Zilla::Plugin::PkgVersion
+      name: PkgVersion
+      version: 4.101890
+    -
+      class: Dist::Zilla::Plugin::MetaConfig
+      name: MetaConfig
+      version: 4.101890
+    -
+      class: Dist::Zilla::Plugin::MetaYAML
+      name: MetaYAML
+      version: 4.101890
+    -
+      class: Dist::Zilla::Plugin::MetaJSON
+      name: MetaJSON
+      version: 4.101890
+    -
+      class: Dist::Zilla::Plugin::License
+      name: License
+      version: 4.101890
+    -
+      class: Dist::Zilla::Plugin::Readme
+      name: Readme
+      version: 4.101890
+    -
+      class: Dist::Zilla::Plugin::Manifest
+      name: Manifest
+      version: 4.101890
+    -
+      class: Dist::Zilla::Plugin::ConfirmRelease
+      name: ConfirmRelease
+      version: 4.101890
+    -
+      class: Dist::Zilla::Plugin::UploadToCPAN
+      name: UploadToCPAN
+      version: 4.101890
+    -
+      class: Dist::Zilla::Plugin::PodWeaver
+      name: PodWeaver
+      version: 3.101640
+    -
+      class: Dist::Zilla::Plugin::MetaResources
+      name: MetaResources
+      version: 4.101890
+    -
+      class: Dist::Zilla::Plugin::Authority
+      name: Authority
+      version: 1.000
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':InstallModules'
+      version: 4.101890
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':TestFiles'
+      version: 4.101890
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':ExecFiles'
+      version: 4.101890
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':ShareFiles'
+      version: 4.101890
+  zilla:
+    class: Dist::Zilla::Dist::Builder
+    config:
+      is_trial: 0
+    version: 4.101890
+x_authority: cpan:SCHWIGON
